Added more features like PaySlip loading, fetching all KPI Measurement etc